objects/Lead.object
<CustomObject>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__AssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Assignment Rule</label>
        <referenceTo>maps__AssignmentRule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>partdir_mp__AC_Partner_Account_Id__c</fullName>
        <label>AC Partner Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__AC_Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AC Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Marketplace Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Lead_Quality__c</columns>
        <columns>Source__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>escore__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>Hot_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Total__c</field>
            <operation>greaterOrEqual</operation>
            <value>20</value>
        </filters>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Hot</value>
        </filters>
        <label>Hot Leads</label>
    </listViews>
    <listViews>
        <fullName>Lead_Qualification_Team_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lead Qualification Team</label>
        <queue>Lead_Qualification_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Qualified_Leads_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Lead_Score__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Score_Value__c</field>
            <operation>greaterOrEqual</operation>
            <value>70</value>
        </filters>
        <label>Marketing Qualified Channel Leads</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>ACTION_CADENCE</columns>
        <columns>Lead_Quality__c</columns>
        <columns>Source__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Lead</value>
        </filters>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Registrations</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Approval_Status__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.DealRegistration</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>My Open Registrations</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Rejected_Registrations</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Approval_Status__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.DealRegistration</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>My Rejected Registrations</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Deal_Registrations</fullName>
        <columns>Priority__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Source__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.DealRegistration</value>
        </filters>
        <label>New Deal Registrations</label>
        <language>en_US</language>
        <sharedTo>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Deal_Registrations_TEST</fullName>
        <columns>Priority__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Source__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.DealRegistration</value>
        </filters>
        <label>Deal Registrations</label>
        <language>en_US</language>
        <sharedTo>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Lead_Score__c</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CLEAN_STATUS</columns>
        <columns>Source__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pardot_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>pi__score__c</columns>
        <columns>pi__grade__c</columns>
        <columns>pi__last_activity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Pardot_Lead</value>
        </filters>
        <label>Pardot Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Partner_Application</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.MFG_Discrete_Partners_Partner_Application</value>
        </filters>
        <label>Partner Application</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Loyalty_Program_Lead_Pass</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Partner Loyalty Program Lead Pass</label>
        <queue>UnassignedPartnerLeads</queue>
    </listViews>
    <listViews>
        <fullName>Time_Off_Manager_Payroll_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Time_Off_Manager_Payroll</label>
        <queue>Time_Off_Manager_Payroll</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UnassignedPartnerLeads</fullName>
        <columns>Priority__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Source__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Queue</filterScope>
        <label>Partner Leads - Unassigned</label>
        <queue>UnassignedPartnerLeads</queue>
    </listViews>
    <recordTypes>
        <fullName>DealRegistration</fullName>
        <active>true</active>
        <businessProcess>Deal Registration Lead</businessProcess>
        <description>Used by partners to register leads in the Partner Community.</description>
        <label>Deal Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <businessProcess>Sales Lead</businessProcess>
        <description>Standard lead qualification and conversion process.</description>
        <label>Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>MFG_Discrete_Partners_Partner_Application</fullName>
        <active>true</active>
        <businessProcess>Partner Recruitment</businessProcess>
        <description>Used when a potential partner applies to the partner program.</description>
        <label>Partner Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pardot_Lead</fullName>
        <active>true</active>
        <businessProcess>Sales Lead</businessProcess>
        <description>Demonstrates the capabilities of Pardot.</description>
        <label>Pardot Lead</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>